# permit

./: .gitignore  boot.sh  pyproject.toml
.github/workflows/: build-push.yml
accounts/management/commands/: gmail_auth.py  setup_oauth.py
config/: gmail_backend.py  settings.py  urls.py
docker/: Dockerfile
docs/: request.txt
docx_templates/: permit_template_admin.docx  permit_template_client.docx
permits/: admin.py  apps.py  convert2pdf.py  document.py  email.py  forms.py  models.py  urls.py  views.py
permits/management/commands/: create_permit_template.py
permits/migrations/: 0001_initial.py
templates/: base.html
templates/emails/: permit_invite.html  permit_invite.txt
templates/permits/: admin_panel.html  already_filled.html  permit_done.html  permit_fill.html  token_expired.html
templates/permits/partials/: create_form.html  fill_form.html  permit_done.html  permit_list.html
